--- a/Website/Website/Website/Areas/Admin/Views/News/Index.cshtml
+++ b/Website/Website/Website/Areas/Admin/Views/News/Index.cshtml
@@ -1,10 +1,9 @@
-﻿@model IEnumerable<DBModel.ET.Footer>
+﻿@model IEnumerable<DBModel.ET.News>
 
 @{
-    ViewBag.Title = "Quản lý chân trang";
+    ViewBag.Title = "Tin tức";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
-
 @section ClienCSS{
     <!-- DataTables -->
     <link rel="stylesheet" href="~/Content/admin/bower_components/datatables.net-bs/css/dataTables.bootstrap.min.css">
@@ -61,7 +60,7 @@
 @section ContenHeader{
     <section class="content-header">
         <h1>
-            Danh mục chân trang
+            Danh mục tin tức
         </h1>
         <ol class="breadcrumb">
             <li>@Html.ActionLink(@Resources.ResourceAdmin.AdminFunctionCreateButtonText, "Create", null, new { @class = "btn btn-primary" })</li>
@@ -76,11 +75,34 @@
                 <thead>
                     <tr>
                         <th>
-                            @Html.DisplayNameFor(model => model.ID)
+                            @Html.DisplayNameFor(model => model.Name)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.CategoryID)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.ModifiedBy)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.ModifiedDate)
                         </th>
                         <th>
                             @Html.DisplayNameFor(model => model.Status)
                         </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.UpTopHot)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.UpTopNew)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.ViewCount)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Source)
+                        </th>
+                       
+                       
                         <th></th>
                     </tr>
                     </thead>
@@ -89,9 +111,22 @@
                     {
                         <tr>
                             <td>
-                                @Html.DisplayFor(modelItem => item.ID)
+                                @Html.DisplayFor(modelItem => item.Name)
                             </td>
-                          
+                            <td>
+                                @Html.DisplayFor(modelItem => item.CategoryID)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.ModifiedBy)
+                            </td>
+                            <td>
+                                @{
+                                    var ModifiedDate = "";
+                                    ModifiedDate = item.ModifiedDate.ToString("dd/MM/yyyy");
+
+                                }
+                                @ModifiedDate
+                            </td>
                             <td>
                                 @{
                                     var sStatus = "";
@@ -99,28 +134,52 @@
                                     switch (iStus)
                                     {
 
-                                        case 0: sStatus = "Khóa"; break;
-                                        case 1: sStatus = "Kích hoạt"; break;
+                                        case 0: sStatus = "Chưa duyệt"; break;
+                                        case 1: sStatus = "Đã duyệt"; break;
                                         default: break;
                                     }
                                 }
                                 @sStatus
                             </td>
                             <td>
-                                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-                                @Ajax.ActionLink("Xoá", "Delete", new { id = item.ID }, new AjaxOptions
-                           {
-                               Confirm = "Bạn có muốn xoá bản ghi này?",
-                               OnComplete = "$('#row_" + @item.ID + "').remove()",
-                               HttpMethod = "Delete"
-                           })
+                                @{ 
+                                    var UpTopHot = "";
+                                    UpTopHot = item.UpTopHot.ToString("dd/MM/yyyy");
+
+                            }
+                                @UpTopHot
+                            </td>
+                            <td>
+                                @{
+                                    var UpTopNew = "";
+                                    UpTopNew = item.UpTopNew.ToString("dd/MM/yyyy");
+
+                                }
+                                @UpTopNew
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.ViewCount)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Source)
+                            </td>
+                            <td>
+                                @Html.ActionLink("Edit", "Edit", new { id = item.NewsID }) |
+                                @Html.ActionLink("Duyệt tin", "Publicer", new { id = item.NewsID }) |
+                                @Html.ActionLink("Details", "Details", new { id = item.NewsID }) |
+                                @Ajax.ActionLink("Xoá", "Delete", new { id = item.NewsID }, new AjaxOptions
+                             {
+                                 Confirm = "Bạn có muốn xoá bản ghi này?",
+                                 OnComplete = "$('#row_" + @item.NewsID + "').remove()",
+                                 HttpMethod = "Delete"
+                             })
                             </td>
                         </tr>
                     }
 
+
                     </tbody>
-                </table>
+            </table>
         </div>
         <!-- /.box-body -->
     </div>
