--- a/Website/Website/Website/Views/Home/Index.cshtml
+++ b/Website/Website/Website/Views/Home/Index.cshtml
@@ -3,9 +3,10 @@
 @{
     ViewBag.Title = "Index";
     ViewBag.MetaKeywords = "Index";
+    ViewBag.MetaDescription= "";
     Layout = "~/Views/Shared/_WebLayout.cshtml";
     List<StatsInfo> lstSIF = (List<StatsInfo>)ViewBag.StatsInfo;
-   }
+}
 
 
 <!-- about -->
@@ -660,33 +661,4 @@
     </div>
 </div>
 <!-- //news -->
-<!-- brands -->
-<div class="brands-w3ls py-md-5 py-4">
-    <div class="container py-xl-3">
-        <ul class="list-unstyled">
-            <li>
-                <i class="fab">s</i>
-            </li>
-            <li>
-                <i class="fab fa-angrycreative"></i>
-            </li>
-            <li>
-                <i class="fab fa-aviato"></i>
-            </li>
-            <li>
-                <i class="fab fa-aws"></i>
-            </li>
-            <li>
-                <i class="fab fa-cpanel"></i>
-            </li>
-            <li>
-                <i class="fab fa-hooli"></i>
-            </li>
-            <li>
-                <i class="fab fa-node"></i>
-            </li>
-        </ul>
-    </div>
-</div>
-<!-- //brands -->
 
