--- a/Website/Website/Website/Areas/Admin/Views/Group/Create.cshtml
+++ b/Website/Website/Website/Areas/Admin/Views/Group/Create.cshtml
@@ -79,7 +79,7 @@
             Tạo nhóm người dùng
         </h1>
         <ol class="breadcrumb">
-            <li><a href="~/Admin/User/Index"><i class="fa fa-dashboard"></i> Quay lại</a></li>
+            <li><a href="~/Admin/Group/Index"><i class="fa fa-dashboard"></i> Quay lại</a></li>
         </ol>
     </section>
 }
