--- a/Website/Website/Website/Content/Client/nivo-slider/nivo-slider.css
+++ b/Website/Website/Website/Content/Client/nivo-slider/nivo-slider.css
@@ -10,22 +10,20 @@
 /* The Nivo Slider styles */
 .nivoSlider {
 	position:relative;
-	width:100%;/* Make sure your images are the same size */
-	 height:450px; /* Make sure your images are the same size */
+	width:100%;
+	height:auto;
 	overflow: hidden;
 }
 .nivoSlider img {
 	position:absolute;
 	top:0px;
 	left:0px;
-     height:450px;
 	max-width: none;
 }
 .nivo-main-image {
 	display: block !important;
 	position: relative !important; 
 	width: 100% !important;
-    height:450px;
 }
 
 /* If an image is wrapped in a link */
@@ -34,7 +32,7 @@
 	top:0px;
 	left:0px;
 	width:100%;
-	height:450px;
+	height:100%;
 	border:0;
 	padding:0;
 	margin:0;
@@ -49,7 +47,7 @@
 	display:block;
 	position:absolute;
 	z-index:5;
-	height:450px;
+	height:100%;
 	top:0;
 }
 .nivo-box {
@@ -65,7 +63,7 @@
 	position:absolute;
 	left:0px;
 	bottom:0px;
-	background:#46b701;
+	background:#089800;
 	color:#fff;
 	width:100%;
 	z-index:8;
@@ -104,14 +102,16 @@
 }
 /* Control nav styles (e.g. 1,2,3...) */
 .nivo-controlNav {
-    position:relative;
 	text-align:center;
-    top:-75px;
-    z-index:9;
+	padding: 15px 0;
 }
 .nivo-controlNav a {
 	cursor:pointer;
 }
 .nivo-controlNav a.active {
 	font-weight:bold;
+}
+.slider-wrapper { 
+	width: 100%; 
+	margin: 0 auto;
 }
