--- a/Website/Website/Website/Content/Client/nivo-slider/themes/default/default.css
+++ b/Website/Website/Website/Content/Client/nivo-slider/themes/default/default.css
@@ -27,8 +27,10 @@ Supports Thumbs: true
 }
 
 .theme-default .nivo-controlNav {
+    position:relative;
 	text-align: center;
-	padding: 20px 0;
+	z-index:9;
+    margin-top:-75px;
 }
 .theme-default .nivo-controlNav a {
 	display:inline-block;
